ajout affichage date dans le script CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ pages:
   script:
   - pip install -r requirements.txt
   - pelican -s publishconf.py
+  - date
   artifacts:
     paths:
     - public/
