--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,10 @@
-image: python:3-alpine
+image: debian:latest
 
 pages:
   script:
-  - pip install -r requirements.txt
+  - apt-get update && apt-get install -y locales && rm -rf /var/lib/apt/lists/* \
+    && localedef -i fr_FR -c -f UTF-8 -A /usr/share/locale/locale.alias fr_FR.UTF-8 \
+    && apt-get update && apt-get install -y pelican apache2
   - pelican -s publishconf.py
   artifacts:
     paths:
